[gd_scene load_steps=2 format=2]

[ext_resource path="res://PictureDownload.gd" type="Script" id=1]

[node name="PictureDownload" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SearchHTTPRequest" type="HTTPRequest" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 354.0
margin_bottom = 598.0
size_flags_horizontal = 0
size_flags_vertical = 0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
margin_bottom = 570.0
size_flags_horizontal = 2
size_flags_vertical = 3
scroll_horizontal_enabled = false

[node name="ImageGridContainer" type="GridContainer" parent="VBoxContainer/ScrollContainer"]
size_flags_horizontal = 2
size_flags_vertical = 2
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 574.0
margin_right = 354.0
margin_bottom = 598.0

[node name="SearchLineEdit" type="LineEdit" parent="VBoxContainer/HBoxContainer"]
margin_right = 296.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_vertical = 0
max_length = 50

[node name="SearchButton" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 300.0
margin_top = 2.0
margin_right = 354.0
margin_bottom = 22.0
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Search"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="request_completed" from="SearchHTTPRequest" to="." method="_on_SearchHTTPRequest_request_completed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/SearchButton" to="." method="_on_SearchButton_pressed"]
